--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,38 @@ body {
   padding: 0;
   font-family: sans-serif
 }
+
+.form-control label,
+.form-control input {
+  width: 100%;
+  display: block;
+}
+
+.form-control label {
+  margin-bottom: 0.5rem;
+}
+
+.form-control {
+  margin-bottom: 1rem;
+}
+
+.form-actions button,
+.btn {
+  background: rgb(28, 203, 212);
+  font: inherit;
+  border: 1px solid rgb(28, 203, 212);
+  border-radius: 3px;
+  padding: 0.25rem 1rem;
+  margin-right: 1rem;
+  box-shadow: 1px 1px 5px rgba(64, 62, 62, 0.42);
+  color: white;
+  cursor: pointer;
+}
+
+.form-actions button:active,
+.form-actions button:hover,
+.btn:active,
+.btn:hover {
+  background: rgb(39, 164, 170);
+  border-color: rgb(39, 164, 170);
+}
