--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -48,5 +48,5 @@
 .main-navigation__items a.active,
 .main-navigation__items button:active,
 .main-navigation__items button:hover {
-    color: rgb(229, 244, 120);
+    color: white;
 }
